add styles to page

--- a/views/base.twig
+++ b/views/base.twig
@@ -1,5 +1,20 @@
 {% block header %}
-<div>PAJARO DIABLO</div>
+<header>
+        <title>Pajaro Diablo Oficial</title> 
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="static/dist/bundle.js" type="text/javascript"></script>  
+</header>
+{% endblock %}
+{% block menu %}
+<h1 class="titlePage">PAJARO DIABLO - Pagina oficial</h1>
+<div class="menuNav">
+    <a href="">INICIO</a>
+    <a href="">SHOWS</a>
+    <a href="">INTEGRANTES</a>
+    <a href="">VIDEOS</a>
+    <a href="">IMAGENES</a> 
+</div>
 {% endblock %}
 {% block content %}
 {% endblock %}
