--- a/views/index.twig
+++ b/views/index.twig
@@ -1,26 +1,13 @@
-{% extends "base.twig" %}
 <!DOCTYPE html>
+{% extends "base.twig" %}
 <html lang="en">
-    <head>
-        <title></title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
-    </head>
+    {% block header %}    {{ parent() }}{% endblock %}    
     <body>
-        {% block header %}   {{ parent() }} {% endblock %}
+        {% block menu %}   {{ parent() }} {% endblock %}
         {% block content %}
-                HOLA TODO EL MUNDO {{ message }}      
                 <div id="map_1"></div>  
-                <div id="map_2"></div>  
-                <div id="map_3"></div>  
-                <div id="map_4"></div>  
-                <script src="static/dist/bundle.js" type="text/javascript"></script>    
                 <script type="text/javascript">
-                    renderMap('map_1', {x:1000, y:1230, status:'ON'});
-                    renderMap('map_2', {x:2000, y:1220, status:'OFF'});
-                    renderMap('map_3', {x:2000, y:1230, status:'ON'});
-                    renderMap('map_4', {x:2000, y:130, status:'OFF'});
+               //     renderMap('map_1', {x:1000, y:1230, status:'ON'});
                 </script>                
         {% endblock %}
     </body>
