--- a/views/base.twig
+++ b/views/base.twig
@@ -9,12 +9,15 @@
 {% block menu %}
 <h1 class="titlePage">PAJARO DIABLO - Pagina oficial</h1>
 <div class="menuNav">
-    <a href="">INICIO</a>
-    <a href="">SHOWS</a>
-    <a href="">INTEGRANTES</a>
-    <a href="">VIDEOS</a>
-    <a href="">IMAGENES</a> 
+    <a href="/">INICIO</a>
+    <a href="/shows">SHOWS</a>
+    <a href="/integrantes">INTEGRANTES</a>
+    <a href="/videos">VIDEOS</a>
+    <a href="/imagenes">IMAGENES</a> 
 </div>
 {% endblock %}
 {% block content %}
+{% endblock %}
+{% block footer %}
+<footer class="footer">Copyright by Eibertek </footer>
 {% endblock %}
